# bridge_project

./: .env.example  .gitignore  AUDIT_REPORT.md  BRIDGE_SERVER_README.md  Dockerfile  IMPLEMENTATION_STATUS.md  PRODUCTION_READINESS_REPORT.md  README.md  bridge_server.py  chat_history.txt  client.py  count_models.py  discovery_page.html  docker-compose.yml  dom_debug.html  dom_probe.py  how_to_use.md  login_helper.py  model.md  network_requests.txt  pyproject.toml  registry.py  requirements.txt  server_requirements.txt  test_all_models.py
_legacy/: arena_cli.py  bootstrap_cache.py  discovery_mini.py  discovery_probe.py  discovery_probe_simple.py  dump_text.py  engine.py  gateway.py  test_all_models.py
artifacts/: FIX_SUMMARY.md  REAL_TIME_TEST_STATUS.md  cli_transcript.txt
client/: README.md  browser_manager.py  cli.py  client.py  config.py  gateway.py  logging_config.py  model_cache.py  rate_limiter.py  requirements.txt  session_manager.py
discovery/: discovery_probe.py
old_data/: chat_history.txt  master_prompt.txt
providers/: __init__.py  arena.py  base.py  deepseek.py  kimi.py  qwen.py
server/: README.md  package.json  profiles.json  server.js
systemd/: bridge-client.service
tests/: conftest.py  test_gateway.py  test_gateway_endpoints.py  test_session.py
tests/e2e/: conftest.py  test_e2e_gateway.py
